# claudedev-shared

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/claudedev_shared/: __init__.py  core.py
tests/: test_core.py
